# concrete_block_registration_teaser_ros2

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml
config/: block_registration.yaml
include/concrete_block_registration_teaser/: io_utils.hpp  registration_config.hpp  registration_types.hpp  ros_debug_helpers.hpp  teaser_registration_pipeline.hpp
launch/: block_registration_teaser.launch.py
src/: block_registration_teaser_node.cpp  io_utils.cpp  registration_config.cpp  ros_debug_helpers.cpp  teaser_registration_pipeline.cpp
